# MCP-Case-Study

./: .gitignore  Dockerfile  README.md  generate_token.py  pyproject.toml
src/: auth.py  auth_tools.py  auth_utils.py  client.py  context.py  generate_token.py  server.py  test_data.py
src/plugins/: __init__.py  auth_tool.py  financial_data_tool.py  postgres_tool.py  weather_tool.py
src/plugins/utils/: base_plugin.py  decorators.py  permissions.py  resource_access.py  utils.py
